# personio-rs

./: Cargo.toml  LICENSE-MIT  README.md
examples/: auth.rs
src/: lib.rs
src/shared/: errors.rs  https.rs
src/version1/: auth.rs  client.rs  mod.rs
