[package]
name = "personio-rs"
authors = ["Bayram K", "Bayram K <bkuliyev@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Async Rust client for the Personio HR management system."
repository = "https://github.com/fade2black/personio-rs"

[dependencies]
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
